# tauri_macos_test

./: README.md  index.html  package-lock.json  package.json  secondary.html  tsconfig.json  vite.config.ts
src/: main.ts  secondary.ts
src-tauri/: Cargo.toml  build.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
