[package]
name = "tauri-macos-test"
version = "0.0.1"
edition = "2021"

[features]
default = ["tauri/macos-private-api"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
