[package]
name = "tauri-macos-test"
version = "0.0.1"
edition = "2021"

[features]
default = ["tauri/macos-private-api", "wry"]

[dependencies]
tauri = { version = "2", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wry = { version = "0.55", optional = true, features = ["transparent"] }
